--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ humandate: "October 30-31, 2017"    # human-readable dates for the workshop (e.g
 humantime: "10.00 am - 5.00pm"    # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
 startdate: 2017-10-30      # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
 enddate: 2017-10-31        # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
-instructor: ["Karin Lageson", "Martin Callaghan"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+instructor: ["Karin Lagesen", "Martin Callaghan"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 helper: ["Alexander Konovalov"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: ["k.michalickova@imperial.ac.uk"] # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
 etherpad:             # optional: URL for the workshop Etherpad if there is one
