--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
   Please read the following before the workshop begins:
 </p>
 <ol>
-  <li><a href="{{ site.training_site }}/papers/science-of-learning-2015.pdf">The Science of Learning</a></li>
+  <li><a href="https://carpentries.github.io/instructor-training/files/papers/science-of-learning-2015.pdf">The Science of Learning</a></li>
 </ol>
 <p>
   Please also read through <em>one</em> of the episodes below
@@ -206,45 +206,45 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 <hr/>
 
 <p>
-  Please see <a href="{{ site.training_site }}">this site</a> for course material and for the schedule.
+  <h2 id="schedule" name="preparation">Schedule</h2>
 </p>
-
-
-<!--
+<b>Note that the workshop starts at 09:15 and finishes by 17:00 on both days</b>
 
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
+    <h3>Day 1: Monday</h3>
     <table class="table table-striped">
-      <tr> <td>Day 1</td> <td>09:00</td> <td>Welcome</td> </tr>
+      <tr> <td>Day 1</td> <td>09:15</td> <td>Welcome</td> </tr>
       <tr> <td>     </td> <td>09:10</td> <td>Introduction</td> </tr>
-      <tr> <td>     </td> <td>09:40</td> <td>Novices and Formative Assessment</td> </tr>
-      <tr> <td>     </td> <td>10:40</td> <td>Morning Coffee</td> </tr>
-      <tr> <td>     </td> <td>10:55</td> <td>Teaching as a Performance Art</td> </tr>
-      <tr> <td>     </td> <td>11:55</td> <td>Morning Wrap-Up</td> </tr>
-      <tr> <td>     </td> <td>12:10</td> <td>Lunch</td> </tr>
-      <tr> <td>     </td> <td>13:10</td> <td>Expertise and Memory</td> </tr>
-      <tr> <td>     </td> <td>14:25</td> <td>Afternoon Coffee</td> </tr>
-      <tr> <td>     </td> <td>14:40</td> <td>Performance Revised</td> </tr>
-      <tr> <td>     </td> <td>15:25</td> <td>Cognitive Load</td> </tr>
-      <tr> <td>     </td> <td>16:05</td> <td>Afternoon Wrap-Up</td> </tr>
-      <tr> <td>     </td> <td>16:20</td> <td>Finish</td> </tr>
+      <tr> <td>     </td> <td>09:20</td> <td>How learning works: the importance of practice</td> </tr>
+      <tr> <td>     </td> <td>10:20</td> <td>How learning works: expertise and instruction</td> </tr>
+      <tr> <td>     </td> <td>11:20</td> <td>Morning Coffee</td> </tr>
+      <tr> <td>     </td> <td>11:35</td> <td>How learning works: working memory and cognitive load</td> </tr>
+      <tr> <td>     </td> <td>12:20</td> <td>Building teaching skill: getting feedback</td> </tr>
+      <tr> <td>     </td> <td>12:35</td> <td>Lunch</td> </tr>
+      <tr> <td>     </td> <td>13:30</td> <td>Creating a Positive Learning Environment: Motivation and Demotivation</td> </tr>
+      <tr> <td>     </td> <td>14:40</td> <td>Creating a Positive Learning Environment: Mindset</td> </tr>
+      <tr> <td>     </td> <td>15:15</td> <td>Afternoon Coffee</td> </tr>
+      <tr> <td>     </td> <td>15:35</td> <td>Building Teaching Skill: The Importance of Practice</td> </tr>
+      <tr> <td>     </td> <td>16:45</td> <td>Wrap-Up and Homework for Tomorrow</td> </tr>
+      <tr> <td>     </td> <td>17:00</td> <td>Finish</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
-    <h3>Day 2</h3>
+    <h3>Day 2: Tuesday</h3>
     <table class="table table-striped">
-      <tr> <td>Day 2</td> <td>09:00</td> <td>Live Coding</td> </tr>
-      <tr> <td>     </td> <td>10:15</td> <td>Morning Coffee</td> </tr>
-      <tr> <td>     </td> <td>10:30</td> <td>The Carpentries</td> </tr>
-      <tr> <td>     </td> <td>11:30</td> <td>Carpentry Teaching Practices</td> </tr>
+      <tr> <td>Day 2</td> <td>09:15</td> <td>Live Coding</td> </tr>
+      <tr> <td>     </td> <td>11:15</td> <td>Morning Coffee</td> </tr>
+      <tr> <td>     </td> <td>11:30</td> <td>The Carpentries</td> </tr>
+      <tr> <td>     </td> <td>12:00</td> <td>Carpentry Teaching Practices</td> </tr>
       <tr> <td>     </td> <td>12:00</td> <td>Morning Wrap-Up</td> </tr>
-      <tr> <td>     </td> <td>12:15</td> <td>Lunch</td> </tr>
-      <tr> <td>     </td> <td>13:15</td> <td>Motivation and Demotivation</td> </tr>
+      <tr> <td>     </td> <td>12:30</td> <td>Lunch</td> </tr>
+      <tr> <td>     </td> <td>13:30</td> <td>Motivation and Demotivation</td> </tr>
       <tr> <td>     </td> <td>14:00</td> <td>Lessons and Objectives</td> </tr>
       <tr> <td>     </td> <td>15:00</td> <td>Afternoon Coffee</td> </tr>
-      <tr> <td>     </td> <td>15:15</td> <td>Afternoon Wrap-Up</td> </tr>
-      <tr> <td>     </td> <td>16:00</td> <td>Finish</td> </tr>
+      <tr> <td>     </td> <td>15:15</td> <td>Qualifying as an instructor</td> </tr>
+      <tr> <td>     </td> <td>16:30</td> <td>Workshop wrapup</td> </tr>
+      <tr> <td>     </td> <td>16:45</td> <td>Finish</td> </tr>
     </table>
   </div>
 </div>
