--- a/index.html
+++ b/index.html
@@ -214,37 +214,37 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
   <div class="col-md-6">
     <h3>Day 1: Monday</h3>
     <table class="table table-striped">
-      <tr> <td>Day 1</td> <td>09:15</td> <td>Welcome</td> </tr>
-      <tr> <td>     </td> <td>09:10</td> <td>Introduction</td> </tr>
-      <tr> <td>     </td> <td>09:20</td> <td>How learning works: the importance of practice</td> </tr>
-      <tr> <td>     </td> <td>10:20</td> <td>How learning works: expertise and instruction</td> </tr>
-      <tr> <td>     </td> <td>11:20</td> <td>Morning Coffee</td> </tr>
-      <tr> <td>     </td> <td>11:35</td> <td>How learning works: working memory and cognitive load</td> </tr>
-      <tr> <td>     </td> <td>12:20</td> <td>Building teaching skill: getting feedback</td> </tr>
-      <tr> <td>     </td> <td>12:35</td> <td>Lunch</td> </tr>
-      <tr> <td>     </td> <td>13:30</td> <td>Creating a Positive Learning Environment: Motivation and Demotivation</td> </tr>
-      <tr> <td>     </td> <td>14:40</td> <td>Creating a Positive Learning Environment: Mindset</td> </tr>
-      <tr> <td>     </td> <td>15:15</td> <td>Afternoon Coffee</td> </tr>
-      <tr> <td>     </td> <td>15:35</td> <td>Building Teaching Skill: The Importance of Practice</td> </tr>
-      <tr> <td>     </td> <td>16:45</td> <td>Wrap-Up and Homework for Tomorrow</td> </tr>
-      <tr> <td>     </td> <td>17:00</td> <td>Finish</td> </tr>
+      <tr>  <td>09:15</td> <td>Welcome</td> </tr>
+      <tr>  <td>09:10</td> <td>Introduction</td> </tr>
+      <tr>  <td>09:20</td> <td>How learning works: the importance of practice</td> </tr>
+      <tr>  <td>10:20</td> <td>How learning works: expertise and instruction</td> </tr>
+      <tr>  <td>11:20</td> <td>Morning Coffee</td> </tr>
+      <tr>  <td>11:35</td> <td>How learning works: working memory and cognitive load</td> </tr>
+      <tr>  <td>12:20</td> <td>Building teaching skill: getting feedback</td> </tr>
+      <tr>  <td>12:35</td> <td>Lunch</td> </tr>
+      <tr>  <td>13:30</td> <td>Creating a Positive Learning Environment: Motivation and Demotivation</td> </tr>
+      <tr>  <td>14:40</td> <td>Creating a Positive Learning Environment: Mindset</td> </tr>
+      <tr>  <td>15:15</td> <td>Afternoon Coffee</td> </tr>
+      <tr>  <td>15:35</td> <td>Building Teaching Skill: The Importance of Practice</td> </tr>
+      <tr>  <td>16:45</td> <td>Wrap-Up and Homework for Tomorrow</td> </tr>
+      <tr>  <td>17:00</td> <td>Finish</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2: Tuesday</h3>
     <table class="table table-striped">
-      <tr> <td>Day 2</td> <td>09:15</td> <td>Live Coding</td> </tr>
-      <tr> <td>     </td> <td>11:15</td> <td>Morning Coffee</td> </tr>
-      <tr> <td>     </td> <td>11:30</td> <td>The Carpentries</td> </tr>
-      <tr> <td>     </td> <td>12:00</td> <td>Carpentry Teaching Practices</td> </tr>
-      <tr> <td>     </td> <td>12:00</td> <td>Morning Wrap-Up</td> </tr>
-      <tr> <td>     </td> <td>12:30</td> <td>Lunch</td> </tr>
-      <tr> <td>     </td> <td>13:30</td> <td>Motivation and Demotivation</td> </tr>
-      <tr> <td>     </td> <td>14:00</td> <td>Lessons and Objectives</td> </tr>
-      <tr> <td>     </td> <td>15:00</td> <td>Afternoon Coffee</td> </tr>
-      <tr> <td>     </td> <td>15:15</td> <td>Qualifying as an instructor</td> </tr>
-      <tr> <td>     </td> <td>16:30</td> <td>Workshop wrapup</td> </tr>
-      <tr> <td>     </td> <td>16:45</td> <td>Finish</td> </tr>
+      <tr>  <td>09:15</td> <td>Welcome to day 2</td> </tr>
+      <tr>  <td>09:25</td> <td>Building Teaching Skill: Lesson Study</td> </tr>
+      <tr>  <td>10:15</td> <td>Building Teaching Skill: Live Coding</td> </tr>
+      <tr>  <td>11:15</td> <td>Morning coffee</td> </tr>
+      <tr>  <td>11:30</td> <td>Building Teaching Skill: Performance Revised</td> </tr>
+      <tr>  <td>12:15</td> <td>Lunch</td> </tr>
+      <tr>  <td>13:15</td> <td>The Carpentries: Workshop Introductions</td> </tr>
+      <tr>  <td>14:20</td> <td>The Carpentries: How We Operate</td> </tr>
+      <tr>  <td>15:15</td> <td>Afternoon Coffee</td> </tr>
+      <tr>  <td>15:30</td> <td>The Carpentries: Teaching Practices</td> </tr>
+      <tr>  <td>16:00</td> <td>Workshop wrap-up</td> </tr>
+      <tr>  <td>16:45</td> <td>Finish</td> </tr>
     </table>
   </div>
 </div>
