--- a/index.html
+++ b/index.html
@@ -214,19 +214,18 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
   <div class="col-md-6">
     <h3>Day 1: Monday</h3>
     <table class="table table-striped">
-      <tr>  <td>09:15</td> <td>Welcome</td> </tr>
-      <tr>  <td>09:10</td> <td>Introduction</td> </tr>
-      <tr>  <td>09:20</td> <td>How learning works: the importance of practice</td> </tr>
-      <tr>  <td>10:20</td> <td>How learning works: expertise and instruction</td> </tr>
+      <tr>  <td>09:15</td> <td><a href="https://carpentries.github.io/instructor-training/01-welcome/01-welcome/">Welcome and introduction</a></td> </tr>
+      <tr>  <td>09:25</td> <td><a href="https://carpentries.github.io/instructor-training/01-welcome/02-practice-learning/">How Learning Works: The Importance of Practice</a></td> </tr>
+      <tr>  <td>10:20</td> <td><a href="https://carpentries.github.io/instructor-training/01-welcome/03-expertise/">How Learning Works: Expertise and Instruction</a></td> </tr>
       <tr>  <td>11:20</td> <td>Morning Coffee</td> </tr>
-      <tr>  <td>11:35</td> <td>How learning works: working memory and cognitive load</td> </tr>
-      <tr>  <td>12:20</td> <td>Building teaching skill: getting feedback</td> </tr>
+      <tr>  <td>11:35</td> <td><a href="https://carpentries.github.io/instructor-training/01-welcome/05-memory/">How Learning Works: Working Memory and Cognitive Load</a></td> </tr>
+      <tr>  <td>12:20</td> <td><a href="https://carpentries.github.io/instructor-training/01-welcome/06-feedback/">Building Teaching Skill: Getting Feedback</a></td> </tr>
       <tr>  <td>12:35</td> <td>Lunch</td> </tr>
-      <tr>  <td>13:30</td> <td>Creating a Positive Learning Environment: Motivation and Demotivation</td> </tr>
-      <tr>  <td>14:40</td> <td>Creating a Positive Learning Environment: Mindset</td> </tr>
+      <tr>  <td>13:30</td> <td><a href="https://carpentries.github.io/instructor-training/01-welcome/08-motivation/">Creating a Positive Learning Environment: Motivation and Demotivation</a></td> </tr>
+      <tr>  <td>14:40</td> <td><a href="https://carpentries.github.io/instructor-training/01-welcome/09-mindset/">Creating a Positive Learning Environment: Mindset</a></td> </tr>
       <tr>  <td>15:15</td> <td>Afternoon Coffee</td> </tr>
-      <tr>  <td>15:35</td> <td>Building Teaching Skill: The Importance of Practice</td> </tr>
-      <tr>  <td>16:45</td> <td>Wrap-Up and Homework for Tomorrow</td> </tr>
+      <tr>  <td>15:35</td> <td><a href="https://carpentries.github.io/instructor-training/01-welcome/11-practice-teaching/">Building Teaching Skill: The Importance of Practice</a></td> </tr>
+      <tr>  <td>16:45</td> <td><a href="https://carpentries.github.io/instructor-training/01-welcome/12-homework/">Wrap-Up and Homework for Tomorrow</a></td> </tr>
       <tr>  <td>17:00</td> <td>Finish</td> </tr>
     </table>
   </div>
