Update day 2 schedule

--- a/index.html
+++ b/index.html
@@ -232,17 +232,17 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
   <div class="col-md-6">
     <h3>Day 2: Tuesday</h3>
     <table class="table table-striped">
-      <tr>  <td>09:15</td> <td>Welcome to day 2</td> </tr>
-      <tr>  <td>09:25</td> <td>Building Teaching Skill: Lesson Study</td> </tr>
-      <tr>  <td>10:15</td> <td>Building Teaching Skill: Live Coding</td> </tr>
+      <tr>  <td>09:15</td> <td><a href="https://carpentries.github.io/instructor-training/01-welcome/13-second-welcome/">Welcome Back</a></td> </tr>
+      <tr>  <td>09:25</td> <td><a href="https://carpentries.github.io/instructor-training/01-welcome/14-lesson-study/">Building Teaching Skill: Lesson Study</a></td> </tr>
+      <tr>  <td>10:15</td> <td><a href="https://carpentries.github.io/instructor-training/01-welcome/15-live/">Building Teaching Skill: Live Coding</a</td> </tr>
       <tr>  <td>11:15</td> <td>Morning coffee</td> </tr>
-      <tr>  <td>11:30</td> <td>Building Teaching Skill: Performance Revised</td> </tr>
+      <tr>  <td>11:30</td> <td><a href="https://carpentries.github.io/instructor-training/01-welcome/17-performance/">Building Teaching Skill: Performance Revised</a></td> </tr>
       <tr>  <td>12:15</td> <td>Lunch</td> </tr>
-      <tr>  <td>13:15</td> <td>The Carpentries: Workshop Introductions</td> </tr>
-      <tr>  <td>14:20</td> <td>The Carpentries: How We Operate</td> </tr>
+      <tr>  <td>13:15</td> <td><a href="https://carpentries.github.io/instructor-training/01-welcome/19-introductions/">The Carpentries: Workshop Introductions</a></td> </tr>
+      <tr>  <td>14:20</td> <td><a href="https://carpentries.github.io/instructor-training/01-welcome/20-carpentries/">The Carpentries: How We Operate</a></td> </tr>
       <tr>  <td>15:15</td> <td>Afternoon Coffee</td> </tr>
-      <tr>  <td>15:30</td> <td>The Carpentries: Teaching Practices</td> </tr>
-      <tr>  <td>16:00</td> <td>Workshop wrap-up</td> </tr>
+      <tr>  <td>15:30</td> <td><a href="https://carpentries.github.io/instructor-training/01-welcome/22-practices/">The Carpentries: Teaching Practices</a></td> </tr>
+      <tr>  <td>16:00</td> <td><a href="https://carpentries.github.io/instructor-training/01-welcome/23-checkout/">Workshop Wrap-Up</a></td> </tr>
       <tr>  <td>16:45</td> <td>Finish</td> </tr>
     </table>
   </div>
