--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
   Please note that after this course is over, you will be asked to do
   three short follow-up exercises online in order to finish qualifying
   as an instructor: the details are available at
-  <a href="{{ site.training_site }}/checkout/">{{ site.training_site }}/checkout/</a>.
+  <a href="http://carpentries.github.io/instructor-training/checkout/">http://carpentries.github.io/instructor-training/checkout/</a>.
   If you have any questions about the workshop, the reading material,
   or anything else, please get in touch.
 </p>
